--- a/views/booklists/show.ejs
+++ b/views/booklists/show.ejs
@@ -9,7 +9,7 @@
 </h1>
 
 <% if (booklist.books.length === 0) { %>
-  <p>This list is empty! <a href='/books'>Add books</a></p>
+  <p>This list is empty! <a href='/books'>Add books!</a></p>
 <% } else { %>
 
 <div class="card-container">
