--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,17 +10,21 @@
   <body>
     <nav>
       <a href="/" class="brand">
-        <i class="fas fa-headphones"></i>
+        <i class="fas fa-headphones"></i> 
         PodReads
       </a>
       <a href="/podcasts">
-        <i class="fas fa-microphone-alt"></i>
+        <i class="fas fa-microphone-alt"></i> 
         My Podcasts</a>
-      <a href="/podcasts/search">Find Podcasts</a>
+      <a href="/podcasts/search">
+        <i class="fas fa-search"></i> 
+        Find Podcasts</a>
       <a href="/booklists">
-        <i class="fas fa-book"></i>
+        <i class="fas fa-book"></i> 
         My Books</a>
-      <a href="/books/">Find Books</a>
+      <a href="/books/">
+        <i class="fas fa-search"></i> 
+        Find Books</a>
       <% if (user) { %>
         <a href="/auth/logout">Log Out</a>
       <% } else { %>
