--- a/views/podcasts/index.ejs
+++ b/views/podcasts/index.ejs
@@ -1,5 +1,6 @@
 <%- include('../partials/header') %>
 
+<h1>Followed Podcasts</h1>
 <% if (podcasts) { %>
   <div class="card-container">
   <% podcasts.forEach(podcast => { %>
