--- a/views/podcasts/show.ejs
+++ b/views/podcasts/show.ejs
@@ -2,8 +2,7 @@
 
 <% if (podcast) { %>
 
-  <h1><%= podcast.title %> </h1>
-  <p>
+  <h1><%= podcast.title %>
     <% if (user.podcasts.some(pod => pod.podcastId === podcast.id)) { %>
       <form action="/podcasts/<%= podcast.id %>?_method=DELETE" method="post">
     <% } else { %>
@@ -14,43 +13,54 @@
         <input type="text" name="podcastId" hidden value=<%= podcast.id %>>
         <input type="submit" value="<%= user.podcasts.some(pod => pod.podcastId === podcast.id) ? 'Unfollow Podcast' : 'Follow Podcast' %>">
       </form>
-  </p>
-  <img src="<%= podcast.image %>" alt="<%= podcast.title %> ">
+    </h1>
+<div class="container">
+  <div class="pod-show-info">
+    <img src="<%= podcast.image %>" alt="<%= podcast.title %> ">
 
+    <% if (podcast.description) { %>
+      <% let poddesc = podcast.description.replace(/<script[^>]*>([\S\s]*?)<\/script>/gmi, '') %>
+      <% poddesc = poddesc.replace(/<\/?\w(?:[^"'>]|"[^"]*"|'[^']*')*>/gmi, '') %>
+      <p class="desc"><span>Description:</span> <%= poddesc %> </p>
+    <% } %>
+  </div>
+
+  <% if (episodes) { %>
+  <h1>Episodes:</h1>
   <% episodes.forEach(episode => { %>
-  
-    <h2><%= episode.title %></h2>
+    <h2 class="pod-title"><%= episode.title %></h2>
+    <% const pubDate = new Date(episode.pub_date_ms) %>
+    <h3 class="pod-date"><%= pubDate.toDateString() %></h3>
+    <div class="pod-show-episodes">
     
     <% // episode.description.replace( /(<([^>]+)>)/ig, '') %>
 
     <% let desc = episode.description.replace(/<script[^>]*>([\S\s]*?)<\/script>/gmi, '') %>
     <% desc = desc.replace(/<\/?\w(?:[^"'>]|"[^"]*"|'[^']*')*>/gmi, '') %>
-   
-    
-    <p><%= desc %></p>
-    <% const pubDate = new Date(episode.pub_date_ms) %>
-    <p><%= pubDate.toDateString() %></p>
-
-    <p>Potential Authors
-      <!-- old reged /[A-Z][a-z]*\s[A-Z][a-z]*/g -->
-
-
+    <div class="pod-desc">
+      <%= desc %>
+    </div>
+    <div class="pod-authorlist">
+      <span>Potential Authors</span>
 
       <% const regex = /[A-Z][a-z]{2,}\s[A-Z][a-zA-Z'?]{2,}\s/g %>
       <% const potentialAuthors = desc.match(regex) %>
       <% if (potentialAuthors) { %>
-        <ul>
-        <% potentialAuthors.forEach(author => { %>
-          <li>
-            <a href="/books?intitle=&inauthor=<%= author.replace(' ','+') %>"><%= author %></a>
-          </li>
-        <% }) %>
-      <% } %>
-      </ul>
-    </p>
-    
+          <ul>
+          <% potentialAuthors.forEach(author => { %>
+            <li>
+              <a href="/books?intitle=&inauthor=<%= author.replace(' ','+') %>"><%= author %></a>
+            </li>
+          <% }) %>
+        <% } %>
+        </ul>
+    </div>
+  </div>
   <% }) %>
+  </div>
+  <% } %>
 
+</div>
 <% } %>
 
 
