--- a/views/podcasts/show.ejs
+++ b/views/podcasts/show.ejs
@@ -26,35 +26,38 @@
   </div>
 
   <% if (episodes) { %>
-  <h1>Episodes:</h1>
   <% episodes.forEach(episode => { %>
-    <h2 class="pod-title"><%= episode.title %></h2>
-    <% const pubDate = new Date(episode.pub_date_ms) %>
-    <h3 class="pod-date"><%= pubDate.toDateString() %></h3>
-    <div class="pod-show-episodes">
-    
-    <% // episode.description.replace( /(<([^>]+)>)/ig, '') %>
+    <div class="pod-episode">
+      <div class="pod-episode-info">
+        <h2 class="pod-episode-title"><%= episode.title %></h2>
+        <% const pubDate = new Date(episode.pub_date_ms) %>
+        <h3 class="pod-date"><%= pubDate.toDateString() %></h3>
+      
+      <% // episode.description.replace( /(<([^>]+)>)/ig, '') %>
 
-    <% let desc = episode.description.replace(/<script[^>]*>([\S\s]*?)<\/script>/gmi, '') %>
-    <% desc = desc.replace(/<\/?\w(?:[^"'>]|"[^"]*"|'[^']*')*>/gmi, '') %>
-    <div class="pod-desc">
-      <%= desc %>
-    </div>
-    <div class="pod-authorlist">
-      <span>Potential Authors</span>
+        <% let desc = episode.description.replace(/<script[^>]*>([\S\s]*?)<\/script>/gmi, '') %>
+        <% desc = desc.replace(/<\/?\w(?:[^"'>]|"[^"]*"|'[^']*')*>/gmi, '') %>
+        <div class="pod-desc">
+          <%= desc %>
+        </div>
+      </div>
+      <div class="pod-authorlist">
+        <span>Potential Authors</span>
 
-      <% const regex = /[A-Z][a-z]{2,}\s[A-Z][a-zA-Z'?]{2,}\s/g %>
-      <% const potentialAuthors = desc.match(regex) %>
-      <% if (potentialAuthors) { %>
-          <ul>
-          <% potentialAuthors.forEach(author => { %>
-            <li>
-              <a href="/books?intitle=&inauthor=<%= author.replace(' ','+') %>"><%= author %></a>
-            </li>
-          <% }) %>
-        <% } %>
-        </ul>
-    </div>
+        <% const regex = /[A-Z][a-z]{2,}\s[A-Z][a-zA-Z'?]{2,}\s/g %>
+        <% const potentialAuthors = desc.match(regex) %>
+        <% if (potentialAuthors) { %>
+            <ul>
+            <% potentialAuthors.forEach(author => { %>
+              <li>
+                <a href="/books?intitle=&inauthor=<%= author.replace(' ','+') %>"><%= author %></a>
+              </li>
+            <% }) %>
+          </ul>
+          <% } else { %>
+            <p>No authors detected!</p>
+          <% } %>
+      </div>
   </div>
   <% }) %>
   </div>
