--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -328,16 +328,23 @@ nav a:hover {
   color: orange;
 }
 
-.podcast-card {
+.my-podcast-card {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   margin: 20px;
-  max-width: 400px;
+  width: 200px;
+  height: 200px;
+  background-size: contain;
 }
 
-.podcast-card img {
+.my-podcast-card a {
+  display: block;
+  height: 100%;
+  width: 100%;
+}
+/* .my-podcast-card img {
   max-width: 260px;
   max-height: 260px;
 }
@@ -346,7 +353,7 @@ nav a:hover {
   font-size: 2.5rem;
   color: white;
   text-decoration: none;
-}
+} */
 
 .podcast-title a:hover{
   text-decoration: underline;
