--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -126,23 +126,25 @@ nav {
   justify-content: flex-start;
   align-items: center;
   margin: 0 0 2rem 0;
+  height: 70px;
 }
 
 nav a.brand {
   font-size: 3rem;
   font-weight: 700;
-  padding: 12px 20px;
 }
 
 nav a {
-  display: inline-block;
-  margin: 0;
-  padding: 20px 20px 15px 20px;
+  padding: 0 15px;
+  height: 100%;
   border-bottom: solid 5px #999;
   color: var(--link-orange);
   text-decoration: none;
   font-size: 2.2rem;
   text-shadow: #000 2px 2px 5px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 nav a:last-of-type {
   margin-left: auto;
@@ -152,6 +154,10 @@ nav a:hover {
   text-decoration: none;
   background: #aaa;
   border-bottom: solid 5px var(--link-orange);
+}
+
+nav i {
+  padding: 0 3px 0 0;
 }
 
 .container {
