--- a/views/booklists/index.ejs
+++ b/views/booklists/index.ejs
@@ -29,7 +29,7 @@
 
         <div class="bookcard-info">
           <% if (book.title) { %>
-          <p><%= book.title %> </p>
+          <p class="title"><%= book.title %> </p>
           <% } %>
 
           <% if (book.author) { %>
