refactor podcast show view

--- a/views/podcasts/show copy.ejs
+++ b/views/podcasts/show copy.ejs
@@ -31,16 +31,32 @@
       <div class="pod-episode-info">
         <h2 class="pod-episode-title"><%= episode.title %></h2>
         <% const pubDate = new Date(episode.pub_date_ms) %>
-        <h3 class="pod-date"><%= pubDate.toDateString() %></h3>      
+        <h3 class="pod-date"><%= pubDate.toDateString() %></h3>
+      
+      <% // episode.description.replace( /(<([^>]+)>)/ig, '') %>
+
+        <% let desc = episode.description.replace(/<script[^>]*>([\S\s]*?)<\/script>/gmi, '') %>
+        <% desc = desc.replace(/<\/?\w(?:[^"'>]|"[^"]*"|'[^']*')*>/gmi, '') %>
         <div class="pod-desc">
-          <%= episode.description %>
+          <%= desc %>
         </div>
       </div>
       <div class="pod-authorlist">
         <span>Potential Authors</span>
-        
-        <ul class="author-ul">
- 
+
+        <% const regex = /[A-Z][a-z]{2,}\s[A-Z][a-zA-Z'?]{2,}\s/g %>
+        <% const potentialAuthors = desc.match(regex) %>
+        <% if (potentialAuthors) { %>
+            <ul>
+            <% potentialAuthors.forEach(author => { %>
+              <li>
+                <a href="/books?intitle=&inauthor=<%= author.replace(' ','+') %>"><%= author %></a>
+              </li>
+            <% }) %>
+          </ul>
+          <% } else { %>
+            <p>No authors detected!</p>
+          <% } %>
       </div>
   </div>
   <% }) %>
@@ -57,39 +73,6 @@
 </div>
 <% } %>
 
-<div class="copy">&copy; 2021 Sean Niles</div>
-</body>
-<script type="text/javascript">
 
-const descEls = document.querySelectorAll('.pod-desc');
-const podDescEl = document.querySelector('.desc');
-const authorLists = document.querySelectorAll('.author-ul')
 
-let podDesc = podDescEl.textContent;
-podDesc = podDesc.replace(/<script[^>]*>([\S\s]*?)<\/script>/gmi, '');
-podDesc = podDesc.replace(/<\/?\w(?:[^"'>]|"[^"]*"|'[^']*')*>/gmi, '');
-podDescEl.innerHTML = podDesc;
-
-descEls.forEach((el, i) => {
-  let desc = el.textContent;
-  desc = desc.replace(/<script[^>]*>([\S\s]*?)<\/script>/gmi, '');
-  desc = desc.replace(/<\/?\w(?:[^"'>]|"[^"]*"|'[^']*')*>/gmi, '');
-  el.innerHTML = desc;
-  
-  const regex = /[A-Z][a-z]{2,}\s[A-Z][a-zA-Z'?]{2,}\s/g
-  const potentialAuthors = desc.match(regex)
-
-  if (potentialAuthors) {
-  potentialAuthors.forEach(author => {
-    const li = document.createElement('li')
-    li.innerHTML = `<a href="/books?intitle=&inauthor=${author.replace(' ','+')}">${author}</a>`;
-    authorLists[i].appendChild(li);
-    })
-  } else {
-    const p = document.createElement('p');
-    p.textContent = 'No authors detected'
-    authorLists[i].appendChild(p);
-  }
-})
-</script>
-</html>
+<%- include('../partials/footer') %>
