--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,13 @@
 <%- include('partials/header') %>
 
 <main>
+<h1><i class="fas fa-headphones"></i> PodReads</h1>
+<p>
+  Keep track of the guests who appear on your favorite podcasts and the books they've written!
+
+</p>
+  
+
 </main>
 
 
