--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,15 @@
 <%- include('partials/header') %>
 
-<main>
+<main class="splash">
 <h1><i class="fas fa-headphones"></i> PodReads</h1>
 <p>
-  Keep track of the guests who appear on your favorite podcasts and the books they've written!
-
+  Keep track of the guests who appear on your favorite podcasts and the books they've written.
 </p>
-  
-
+  <% if (!user) { %>
+  <p>
+    <a href="/auth/google">Login to Continue</a>
+  </p>
+  <% } %>
 </main>
 
 
