--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <main class="splash">
 <h1><i class="fas fa-headphones"></i> PodReads</h1>
 <p>
-  Keep track of the guests who appear on your favorite podcasts and the books they've written.
+  Keep track of the Guests who appear on your favorite Podcasts and the Books they've written.
 </p>
   <% if (!user) { %>
   <p>
@@ -12,5 +12,5 @@
   <% } %>
 </main>
 
-
-<%- include('partials/footer') %>
+</body>
+</html>
