--- a/views/podcasts/show.ejs
+++ b/views/podcasts/show.ejs
@@ -59,7 +59,7 @@
 
 <div class="copy">&copy; 2021 Sean Niles</div>
 </body>
-<script type="text/javascript">
+<script>
 
 const descEls = document.querySelectorAll('.pod-desc');
 const podDescEl = document.querySelector('.desc');
